nav bar error fix

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <style>
         /* Active button styling */
         .active {
-            background-color: #10b981; /* green */
+            background-color: #10b981;
             color: white;
         }
         header {
-            background-color: #F9F7F3; /* বা যেকোনো রঙ */
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* হালকা শ্যাডো */
+            background-color: #F9F7F3; 
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
     </style>
   </head>
@@ -79,11 +79,11 @@
                     <h3 class="text-xl">BDT</h3>
                 </div>
                 <h3 class="font-bold text-black text-xl mb-4">Donate for Flood at Noakhali, Bangladesh</h3>
-                <p>নোয়াখালীতে সাম্প্রতিক বন্যায় ব্যাপক ক্ষয়ক্ষতি হয়েছে। আপনার দান অপরিহার্য সরবরাহ প্রদান করতে সাহায্য করবে।</p>
-                <div class="form-control mt-6">
+                <p> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                <div class="form-control mt-12">
                     <input type="text" id="donation-input-noakhali" placeholder="Write Donation Amount" class="input input-bordered" />
                 </div>
-                <div class="form-control mt-4">
+                <div class="form-control mt-6">
                     <button id="donate-now-noakhali" class="btn bg-green-400">Donate Now</button>
                 </div>
             </div>
@@ -101,11 +101,11 @@
                     <h3 class="text-xl">BDT</h3>
                 </div>
                 <h3 class="font-bold text-black text-xl mb-4">Donate for Flood at Feni, Bangladesh</h3>
-                <p>ফেনি অঞ্চলের সাম্প্রতিক বন্যা ব্যাপক ক্ষতি সাধন করেছে। আপনার ডোনেশন সাহায্য করবে প্রয়োজনীয় সরবরাহ প্রদানে।</p>
-                <div class="form-control mt-6">
+                <p> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
+                <div class="form-control mt-12">
                     <input type="text" id="donation-input-feni" placeholder="Write Donation Amount" class="input input-bordered" />
                 </div>
-                <div class="form-control mt-4">
+                <div class="form-control mt-6">
                     <button id="donate-now-feni" class="btn bg-green-400">Donate Now</button>
                 </div>
             </div>
@@ -123,11 +123,11 @@
                     <h3 class="text-xl">BDT</h3>
                 </div>
                 <h3 class="font-bold text-black text-xl mb-4">Aid for Injured in the Quota Movement</h3>
-                <p>কোটা আন্দোলনে আহতদের জন্য সহায়তা প্রদান করুন। আপনার সহযোগিতা সাহায্য করবে তাদের চিকিৎসা খরচ পূরণে।</p>
-                <div class="form-control mt-6">
+                <p>The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+                <div class="form-control mt-12">
                     <input type="text" id="donation-input-quota" placeholder="Write Donation Amount" class="input input-bordered" />
                 </div>
-                <div class="form-control mt-4">
+                <div class="form-control mt-6">
                     <button id="donate-now-quota" class="btn bg-green-400">Donate Now</button>
                 </div>
             </div>
@@ -136,8 +136,8 @@
         <!-- Modal Structure -->
         <div id="success-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
             <div class="bg-white p-8 rounded-lg shadow-lg w-10/12 md:w-1/3 flex flex-col items-center ">
-                <h2 class="text-xl font-bold mb-4 text-2xl">Congrats !</h2>
-                <img class="mb-6 h-9 w-9" src="assets/coin.png" alt="coin">
+                <h2 class=" font-bold mb-6 text-5xl">Congrats !</h2>
+                <img class="mb-6 h-14 w-14" src="assets/coin.png" alt="coin">
                 <p class="text-center">Your donation has been processed successfully. Thank you for your contribution.</p>
                 <button id="close-modal" class="btn bg-green-400 mt-6 px-8">Close</button>
             </div>
