--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           >Blog</a
         >
 
-        <div class="lg:flex items-center lg:my-0 items-center justify-center">
+        <div class="lg:flex items-center lg:my-0  justify-center">
           <img
-            class="w-8 h-8 lg:w-12 h-12 mx-12 lg:mx-4"
+            class="w-8 h-8 lg:w-12 lg:h-12 mx-12 lg:mx-4"
             src="assets/logo.png"
             alt="Logo"
           />
