--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Active button styling */
+        /* Active button */
         .active {
             background-color: #10b981;
             color: white;
@@ -147,7 +147,8 @@
     <script src="js/home.js"></script>
     <script src="js/donation.js"></script>
     <script src="js/modal.js"></script>
-    <script src="js/featureColor.js"></script>
+    <script src="js/featureColor.js">
+    </script>
     
 
     
